fix: form button size on mobile screens

--- a/assets/scss/_form_contact_dark.scss
+++ b/assets/scss/_form_contact_dark.scss
@@ -23,14 +23,28 @@ textarea {
 }
 
 input[type=submit] {
-    font-family: Fira Code, Monaco, Consolas, Ubuntu Mono, monospace;
+    font-family: Helvetica, Fira Code, Monaco, Consolas, Ubuntu Mono, monospace;
     font-size: 1.25em;
-    width: 20%;
+    width: 100%;
     padding: 10px;
+    border: none; /* Removes default border */
+    border-radius: 8px; /* Adds rounded corners */
+    padding: 12px 16px; /* Larger padding for better tap target */
+    display: block; /* Makes the button behave like a block element */
+    cursor: pointer; /* Changes cursor to pointer */
 }
 
 input[type=submit]:hover {
     background-color: $contact-form-input-dark-bg-color;
+}
+
+@media (max-width: 768px) {
+    input[type="submit"] {
+        width: 90%; /* Slightly smaller width for mobile */
+        font-size: 14px; /* Slightly smaller font size for smaller screens */
+        padding: 10px 14px; /* Adjust padding for smaller screens */
+        margin: 0 auto; /* Centers the button horizontally */
+    }
 }
 }
 
